# terminalle

./: .gitignore  404.html  LICENSE  LICENSE.md  MANIFEST.in  README.md  __main__.py  build.py  index.html  org.gnome.Terminalle.service  package.json  pyproject.toml  serve.py  settings.py  setup.cfg  setup.py  termctl.c  terminale.py  terminalle.1  terminalle.1.in  terminalle.desktop  terminalle.py  terminalle.yaml
.github/workflows/: docs.yaml  publish-release.yml  sync-readme-gist.yml  sync-readme-to-gist.yml
assets/: 404.c72c75ab.js  404.html.56d4946c.js  Layout.f55ad4d6.js  app.b1bd2922.js  index.html.20a368e9.js  index.html.582635a7.js  style.18a398e2.css
docs/: README.md
docs/.vuepress/: config.js
terminalle/: __init__.py  __main__.py  auto.py  key.py  org.freedesktop.Terminalle.service  org.gnome.Terminalle.service  party.will.Terminalle.service  settings.py  terminalle.desktop.in  terminalle.py
