[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "terminalle"
description = "A fancy drop-down terminal emulateur."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT-0"
authors = [
  {name = "Will Noble", email = "author@will.party"},
]
keywords = ["terminal", "emulator", "drop-down", "freedesktop", "gdk", "gtk", "gnome", "vte", "console", "sick"]
classifiers = [
  "Intended Audience :: End Users/Desktop",
  "Topic :: Desktop Environment",
  "Topic :: Terminals",
]
# Try to support system-packaged dependencies
# on Ubuntu, Debian, Fedora, Arch.
# Debian is usually the oldest.
dependencies = [
  # https://packages.ubuntu.com/noble/python3-gi
  # https://packages.debian.org/bookworm/python3-gi
  # https://packages.fedoraproject.org/pkgs/pygobject3/python3-gobject/
  # https://archlinux.org/packages/extra/x86_64/python-gobject/
  "PyGObject>=3.42.2",
  # https://packages.ubuntu.com/noble/python3-yaml
  # https://packages.debian.org/bookworm/python3-yaml
  # https://packages.fedoraproject.org/pkgs/PyYAML/python3-pyyaml/
  # https://archlinux.org/packages/extra/x86_64/python-yaml/
  "PyYAML>=6.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/will/terminalle"

[project.scripts]
terminalle = "terminalle.__main__:main"

[tool.setuptools]
packages = ["terminalle"]
package-data = {terminalle = ["terminalle.desktop", "party.will.Terminalle.service"]}

[tool.setuptools.dynamic]
version = {attr = "terminalle.__version__"}

[tool.setuptools.data-files]
"share/man/man1" = ["terminalle.1"]
