[metadata]
name = terminalle
version = 1.0
description = A fancy drop-down terminal emulateur.
author = Will Noble
author_email = author@will.party
long_description = file: README.md
keywords = terminal, emulator, drop-down, gdk, gtk, gnome, vte, console, sick
url = https://github.com/wm-noble/terminalle

[options]
packages = terminalle
python_requires = >=3.6
install_requires =
  dbus-python
  PyGObject
  PyYAML

[options.entry_points]
console_scripts =
  terminalle = terminalle:main
