[metadata]
name = terminalle
version = 0.1
description = A fancy drop-down terminal emulateur.
license = MIT
author = Will
author_email = author@will.party
long_description = file: README.md
long_description_content_type= text/markdown
keywords = terminal, emulator, drop-down, gdk, gtk, gnome, vte, console, sick
url = https://will.party/terminalle

[options]
packages = terminalle
python_requires = >=3.8
install_requires =
  dbus-python
  PyGObject
  PyYAML

[options.entry_points]
console_scripts =
  terminalle = terminalle.__main__:main

[options.package_data]
terminalle =
  terminalle.desktop
  org.gnome.Terminalle.service

[options.data_files]
share/man/man1 =
  terminalle.1
