[metadata]
name = terminalle
version = attr: terminalle.__version__
description = attr: terminalle.__description__
long_description = file: README.md
long_description_content_type= text/markdown
license = attr: terminalle.__license__
author = attr: terminalle.__author__
author_email = attr: terminalle.__email__
url = attr: terminalle.__url__
keywords = terminal, emulator, drop-down, freedesktop, gdk, gtk, gnome, vte, console, sick

[options]
packages = terminalle
python_requires = >=3.8
install_requires =
  PyGObject
  PyYAML

[options.entry_points]
console_scripts =
  terminalle = terminalle.__main__:main

[options.package_data]
terminalle =
  terminalle.desktop
  party.will.Terminalle.service

[options.data_files]
share/man/man1 =
  terminalle.1
